# travelease

./: .gitignore  .replit  README.md  manage.py  pyproject.toml  start.md
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
booking/: admin.py  models.py  urls.py  views.py
booking/management/commands/: populate_data.py  populate_real_data.py  test_email.py
booking/migrations/: 0001_initial.py
payment/: urls.py  views.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/accounts/: edit_profile.html  login.html  profile.html  register.html  verify_otp.html
templates/admin/: login.html
templates/booking/: all_buses.html  all_flights.html  booking_confirmation.html  booking_detail.html  bus_detail.html  cancel_booking.html  flight_detail.html  home.html  search_results.html
templates/payment/: make_payment.html  payment_failed.html
travelease/: asgi.py  settings.py  urls.py  wsgi.py
