[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-phonenumber-field>=8.4.0",
    "gunicorn>=26.0.0",
    "phonenumbers>=9.0.33",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
]
